src/test/error/macro7.lns
{
   macro _hoge( val1:__exp, val2:__exp ) {
      print( ,,val1, ,,val2 );
   }

   _hoge( 1, 2 );
   _hoge( 1 ); // warn
   _hoge(); // warn
}
{
   macro _Test() {
      {
         __var.val = 1;
      }
   }
   _Test();
   fn func() {
      _Test(); // error
   }
}
